Add basic content and styling to hero section

--- a/index.html
+++ b/index.html
@@ -1,18 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
         <title></title>
     </head>
     <body>
         <div class="header">
-            <img src="imgs/logo.png" alt="icosahedron">
+            <img class="logo" src="imgs/logo.png" alt="icosahedron">
             <ul>
                 <li><a>header link one</a></li>
                 <li><a>header link two</a></li>
                 <li><a>header link three</a></li>
             </ul>
         </div>
+        <div class="hero">
+            <div class="hero-text">
+                <div class="hero-main-text">
+                    This website is awesome
+                </div>
+                <div class="hero-secondary-text">
+                    This Website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast
+                </div>
+                <button>Sign up</button>
+            </div>
+            <div class="hero-image">
+                <img src="./imgs/books.jpg" alt="Old books on a bookshelf">
+            </div>  
+        </div>
+
+        <div class="main">
+            
+        </div>
+
+        <div class="footer">
+            <p>Copywrite © The Odin Project 2023</p>
+        </div> 
+        
     </body>
 </html>
